
[v1.1.0p5]
! API: The IconManager now extends UIProperties, all the icons of the framework must now be accessed through the class "DockIcon" (which is an UIValue).
! API: Icons are now only handled by the IconManager. Both DockUI (Core project) and Resources (Common project) no longer handle any icons. The Common project no longer makes a distingtion between "local" and "foreign" icons.
! Bugfix: The unique identifiers of SplitNodes (a node used by a SplitDockStation) are now checked when a new node is inserted into the tree. The unique identifier of parent nodes may be changed to ensure the identifiers really are unique.
! APi: All the strings that are used by the framework are now collected by the TextManager, which is yet another UIProperties.
! API: DockStationListener has an additional method "dockableRepositioned"
- API: A new listener DockableStateListener can be added to Dockables, the listener receives notifications for events related to changed layouts
- API: Calling (C)Dockable.setTitleIcon( null ) now makes the icon invisible, and does no longer restore the default icon.
- Bugfix: Layout could not be stored in byte-array format due to a NullPointerException
- API: CAction and CDecorateableAction are no longer an abstract class as there was no reason to keep them abstract
- API: MenuPieces now have a method "bind" and "unbind" which are automatically called if the root-menu is shown or hidden (see Component.isShown()).
- API: RootMenuPiece now accepts a parent in order to handle "bind" und "unbind" correctly.
! API: The class "bibliothek.gui.dock.support.util.Resources" has been removed. The TextManager now is responsible for all the strings. The bundle is now loaded in CControl.initTexts using a DefaultTextScheme.
- API: FrontendSettingsList now orders its items alphabetically
- Bugfix: Deutsche Übersetzung aktualisiert (German translation updated) 